--- a/Ice-Client/www/index.html
+++ b/Ice-Client/www/index.html
@@ -16,15 +16,15 @@
       <a class="navbar-brand" href="#">Arctic Snow Dog</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Uplink Data</a></li>
-      <li><a href="#">Create Polygon</a></li>
+      <li onclick="publishSevereZone()"><a href="#">Publish Severe Ice Zone</a></li>
+      <li onclick="publishPassableZone()"><a href="#">Publish Passable Ice Zone</a></li>
     </ul>
   </div>
 </nav>
 <div class="container">
 <div style="position: absolute; top: 50px; left: 50px;">
     <!-- Create a canvas for Web World Wind. -->
-    <canvas id="canvasOne" width="1024" height="768">
+    <canvas id="canvasOne" width="1280" height="720">
         Your browser does not support HTML5 Canvas.
     </canvas>
 </div>
@@ -52,7 +52,17 @@
 	polygonObject.dangerous;	
     //TODO
 
+    function publishPassableZone()
+    {
+        //TODO: Tom, hook these up
+        window.alert("publishPassableZone");
+    }
 
+    function publishSevereZone()
+    {
+        //TODO: Tom, hook these up
+        window.alert("publishSevereZone");
+    }
     function onKeyEvent(e)
     {
         e = e || window.event;
@@ -168,16 +178,15 @@
 			var data = JSON.stringify(polygonObject);
 			console.log(data);
 
-			var xhr = new XMLHttpRequest();
-			//TODO
-			//xhr.open("POST", "http://localhost/arcticsundog/Server/index.php", !0);
-			xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-			xhr.send(data);
-			xhr.onreadystatechange = function () {
-			if (xhr.readyState === 4 && xhr.status === 200) {
+			var request = new XMLHttpRequest();
+			request.open("POST", "Controller/polygonjsongenerator.php", true);
+			request.setRequestHeader("Content-type", "application/json");
+            request.send(data);
+			request.onreadystatechange = function () {
+			if (request.readyState === 4 && request.status === 200) {
 				//in case we reply back from server
-				jsondata = JSON.parse(xhr.responseText);
-				console.log(jsondata);
+				// jsondata = JSON.parse(request.responseText);
+				console.log(request.responseText);
 			}
 			}
     }
