--- a/Ice-Client/www/index.html
+++ b/Ice-Client/www/index.html
@@ -71,10 +71,6 @@
         {
             drawPolygons();
         }
-        //else if (e.keyCode == "99")
-       // {
-       //     exportPolygons();
-       // }
         else if (e.keyCode == "105")
         {
             toggleIceLevel();
@@ -172,7 +168,6 @@
 
     function exportPolygons()
     {
-            window.alert("We are ready for export.");
 			var jsondata;
 			//createJSON(polygons[0]);
 			var data = JSON.stringify(polygonObject);
@@ -227,10 +222,10 @@
         //wwd.addLayer(new WorldWind.CompassLayer());
         //wwd.addLayer(new WorldWind.CoordinatesDisplayLayer(wwd));
         var config = {
-            title: "Active Fires",
+            title: "sea_ice_concentration_11",
             version: "1.1.1",
-            service: "http://neowms.sci.gsfc.nasa.gov/wms/wms?",
-            layerNames: "MOD14A1_M_FIRE",
+            service: "http://nsidc.org/cgi-bin/atlas_north?",
+            layerNames: new Array("sea_ice_concentration_01"),
             sector: new WorldWind.Sector(-90, 90, -180, 180),
             levelZeroDelta: new WorldWind.Location(36, 36),
             numLevels: 15,
